fixed some bugs on small page width

--- a/css/basic.less
+++ b/css/basic.less
@@ -164,6 +164,7 @@ th {
 
 a {
     outline: none;
+    word-wrap: break-word;
 }
 a:link,
 a:visited {
