--- a/css/design.less
+++ b/css/design.less
@@ -273,6 +273,7 @@
 }
 
 .license a.urlextern {
-    display: none;
+    display: block;
+    background-position: top left;
 }
 /* icons */
